[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Plane.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "rot"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Plane:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 450, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="log" type="Button" parent="."]
margin_left = 28.8621
margin_top = 25.8131
margin_right = 242.862
margin_bottom = 74.8131
text = "Review Flight Log"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_top = 22.0992
margin_right = 551.0
margin_bottom = 474.099
popup_exclusive = true
window_title = "Open a Log"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/Users/Pedro/Desktop/MEAer/UAV/UAV_GodotUI"
current_file = "volta"
current_path = "/Users/Pedro/Desktop/MEAer/UAV/UAV_GodotUI/volta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" type="Spatial" parent="."]

[node name="Plane" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 0.93733, 0, 0.348443, 0, 1, 0, -0.348443, 0, 0.93733, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spatial"]
autoplay = "rot"
anims/rot = SubResource( 1 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 0.997977, 0, -0.0635744, 0, 1, 0, 0.0635744, 0, 0.997977, -6.803, 5.142, 22.254 )
fov = 50.0
[connection signal="pressed" from="log" to="." method="_on_log_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
